<resources>
    <string name="app_name">MadLevel5Task1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title">My Notepad</string>
    <string name="date">Last updated: %1$s</string>
    <string name="tv_add_note">Add note</string>
    <string name="text_notepad_title">Title note</string>
    <string name="tv_note">Note</string>
    <string name="text_notepad_note">Write whatever you want!</string>
    <string name="btn_save">Save</string>
    />
    />
</resources>